# root-spread

./: .gitignore  README.md  package.json  pnpm-lock.yaml  task.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/scripts/: reset_non_user_data.py
apps/api/src/rootspread_api/: __init__.py  main.py
apps/api/src/rootspread_api/api/: __init__.py
apps/api/src/rootspread_api/api/dependencies/: __init__.py  auth.py
apps/api/src/rootspread_api/api/routes/: __init__.py  auth.py  collab_internal.py  health.py  milestones.py  tasks.py  workspaces.py
apps/api/src/rootspread_api/core/: __init__.py  config.py  database.py  security.py  task_stream.py
apps/api/src/rootspread_api/models/: __init__.py  audit.py  auth.py  milestone.py  mixins.py  task.py  user.py  workspace.py
apps/api/src/rootspread_api/schemas/: __init__.py  audit.py  auth.py  milestone.py  task.py  workspace.py
apps/api/src/rootspread_api/services/: __init__.py  audit_service.py  auth_tokens.py  email_service.py  milestone_service.py  task_service.py  task_sync.py  workspace_service.py
apps/api/tests/: conftest.py  helpers.py  test_auth.py  test_health.py  test_milestones.py  test_tasks.py  test_workspaces.py
apps/collab/: package.json  server.mjs
apps/web/: package.json  vitest.config.ts  vitest.setup.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: auth-card.tsx  mindmap-preview.tsx  reactive-panel.tsx  task-detail-panel.test.tsx  task-detail-panel.tsx  (+15 more)
infra/docker/: compose.dev.yaml
scripts/windows/: dev.ps1  reset-db-keep-users.ps1
(+21 files in other folders)
